--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
   <head><meta charset="UTF-8"><title>Davi, uma história tric trac</title></head>
-  <body></body>
+  <body>
+    <iframe width="110" height="200" src="https://www.myinstants.com/instant/steal-a-brainrot-tric-trac-baraboom-79989/embed/" frameborder="0" scrolling="no"></iframe>
+  </body>
 </html>
