--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <iframe width="110" height="200" 
       src="https://www.myinstants.com/instant/steal-a-brainrot-tric-trac-baraboom-79989/embed/" 
       frameborder="0" scrolling="no"></iframe>
+    <img src="./Davi1.png">
+    <img src="./Davi2.png">
     <style>
       body{
         background-image: url("https://media.sketchfab.com/models/f7d477e2afac4708a69ba7ad713b7bb1/thumbnails/32af992f22ad4edda59cb6154da5a091/6c458999d61f4270a4f67ed64ae2a99f.jpeg");
+        align-items: center;
     </style>
   </body>
 </html>
