--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html>
-  <head><meta charset="UTF-8"><title>Davi, uma história tric trac</title></head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Davi, uma história tric trac</title>
+  </head>
   <body>
     <iframe width="110" height="200" 
       src="https://www.myinstants.com/instant/steal-a-brainrot-tric-trac-baraboom-79989/embed/" 
       frameborder="0" scrolling="no"></iframe>
     <img src="Davi1.png">
     <img src="Davi2.png">
+    <h1>TRIC TRAC BARABOOM</h1>
+    <h2>Aquele que sempre estara nos nossos corações, tric trac, tric trac...</h2>
     <style>
       body{
         background-image: url("https://media.sketchfab.com/models/f7d477e2afac4708a69ba7ad713b7bb1/thumbnails/32af992f22ad4edda59cb6154da5a091/6c458999d61f4270a4f67ed64ae2a99f.jpeg");
