--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <style>
       body{
         background-image: url("https://media.sketchfab.com/models/f7d477e2afac4708a69ba7ad713b7bb1/thumbnails/32af992f22ad4edda59cb6154da5a091/6c458999d61f4270a4f67ed64ae2a99f.jpeg");
+        color: white;
     </style>
   </body>
 </html>
