--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Davi, uma história tric trac</title>
   </head>
   <body>
-    <h1>TRIC TRAC BARABOOM</h1>
-    <h2>Aquele que sempre estara nos nossos corações, tric trac, tric trac...</h2>
+    <h1>DAVI - O TRIC TRAC BARABOOM</h1>
+    <h2>TRIC TRAC BARABOOM</h2>
+    <h3>Aquele que sempre estara nos nossos corações, tric trac, tric trac...</h3>
     <iframe width="110" height="200" 
       src="https://www.myinstants.com/instant/steal-a-brainrot-tric-trac-baraboom-79989/embed/" 
       frameborder="0" scrolling="no"></iframe>
